# research

./: AGENTS.md  PROJECTS.md
renode-research/: Cargo.toml  Dockerfile  NOTES.md  README.md  log.html  report.html  robot_output.xml
renode-research/docs/: intro-to-renode.md
renode-research/rust-uart/: Cargo.toml  README.md  memory.x  renode-config.resc  test-button.resc
renode-research/stm32f3-adc/: Cargo.toml  NOTES.md  log.html  renode-config.resc  report.html  robot_output.xml  stm32f3_adc.repl  test-quick.resc
renode-research/stm32f3-common/: Cargo.toml
renode-research/stm32f3-crc/: Cargo.toml  NOTES.md  log.html  memory.x  renode-config.resc  report.html  robot_output.xml  stm32f3_crc.repl
renode-research/stm32f3-dac/: Cargo.toml  NOTES.md  log.html  renode-config.resc  report.html  robot_output.xml  stm32f3_dac.repl
renode-research/stm32f3-dma/: Cargo.toml  NOTES.md  README.md  log.html  memory.x  renode-config.resc  report.html  robot_output.xml  stm32f3_dma.repl  test-quick.resc
renode-research/stm32f3-exti/: Cargo.toml  NOTES.md  log.html  renode-config.resc  report.html  robot_output.xml  stm32f3_exti.repl
renode-research/stm32f3-gpio/: Cargo.toml  NOTES.md  log.html  renode-config.resc  report.html  robot_output.xml  stm32f3_gpio.repl
renode-research/stm32f3-i2c/: Cargo.toml  NOTES.md  README.md  log.html  renode-config.resc  report.html  robot_output.xml  stm32f3_i2c.repl  test-quick.resc
renode-research/stm32f3-iwdg/: Cargo.toml  NOTES.md  log.html  renode-config.resc  report.html  robot_output.xml  stm32f3_iwdg.repl  test-quick.resc
renode-research/stm32f3-rtc/: Cargo.toml  NOTES.md  log.html  renode-config.resc  report.html  robot_output.xml  stm32f3_rtc.repl  test-quick.resc
renode-research/stm32f3-spi/: Cargo.toml  Dockerfile  NOTES.md  README.md  (+7 more)
(+79 files in other folders)
