[workspace]
resolver = "2"

members = [
    "stm32f3-common",
    "stm32f3-uart",
    "stm32f3-gpio",
    "stm32f3-adc",
    "stm32f3-timer",
    "stm32f3-dma",
    "stm32f3-i2c",
    "stm32f3-spi",
    "stm32f3-rtc",
    "stm32f3-iwdg",
    "stm32f3-exti",
    "stm32f3-crc",
    "stm32f3-dac",
]

# Exclude non-STM32F3 projects
exclude = [
    "rust-uart",
    "interrupt",
]

[workspace.dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"
stm32f3xx-hal = { version = "0.10", features = ["stm32f303xc", "rt"] }

[profile.dev]
opt-level = "s"
debug = true
lto = false
panic = "abort"

[profile.release]
opt-level = "s"
debug = true
lto = true
panic = "abort"
